--- a/components.json
+++ b/components.json
@@ -7,7 +7,7 @@
 		"baseColor": "slate"
 	},
 	"aliases": {
-		"components": "$lib/components",
+		"components": "$lib/blocks",
 		"utils": "$lib/utils"
 	},
 	"typescript": true
