--- a/archive/backend/Cargo.toml
+++ b/archive/backend/Cargo.toml
@@ -9,6 +9,8 @@ prost = "0.13.3"
 tokio = { version = "1", features = ["full"] }
 futures = "0.3"
 bytes = "1.9.0"
+async-stream = "0.3"
+hound = "3.5.1"
 
 [build-dependencies]
 tonic-build = "0.12.3"
